# gral

./: .gitignore  COVERAGE.md  Cargo.toml  Dockerfile  Makefile  README.md  TODO  build.rs  docker-compose.yml  makekeys.sh
.circleci/: config.yml
.github/workflows/: benchmark.yml  docs.yml
api_tests/: environment.config.ts  package-lock.json  package.json  vitest.bm.config.ts  vitest.ci.config.ts  vitest.config.ts
api_tests/helpers/: arangodb.ts  benchmark.ts  globalSetup.js  globalSetupBenchmark.js  globalSetupCI.js  gral.ts  graphGenerator.ts  validator.ts
api_tests/parquet/: requirements.txt
api_tests/scripts/: import_benchmark_datasets  prepare_environment  prepare_integration_datasets  teardown_environment
api_tests/tests/: api_stress.test.ts  authentication.test.ts  loaddata.test.ts  python.test.ts  wiki-Talk.test.ts
api_tests/tests/benchmarks/: pagerank.bench.ts  wiki-Talk.bench.ts
competitive_evaluations/: .gitignore  README.md  package-lock.json  package.json
competitive_evaluations/benchmarks/: datagen-8_0-fb.bench.ts  dota-league-split-compute.bench.ts  dota-league.bench.ts  kgs.bench.ts  twitter_mpi.bench.ts  wiki-Talk-split-compute.bench.ts  wiki-Talk.bench.ts
competitive_evaluations/modules/: common.ts  importGral.js  neo4jHelper.ts
competitive_evaluations/results/: details.md  finaleParallelism32BatchSize100kSharded3.json
competitive_evaluations/scripts/: download_examples  import_examples  start_services
design/: Authentication.md  GraphAnalyticsEngine.md
doit/: doit.fish  doit.js
examples/: README.md  main.js  package-lock.json  package.json
examples/config/: environment.js
examples/modules/: argumentParser.js  graphImporter.js
examples/neo4j/: README.md  argumentParser.js  import.js  main.js
examples/neo4j/modules/: argumentParser.js  import.js
examples/scripts/: downloadSingleDataset
gral/: Cargo.toml  build.rs
gral/design/: GraphAnalyticsEngine.md  PushAPI.md  memoryusage.md
gral/proto/: graphanalyticsengine.proto
gral/src/: aggregation.rs  api.rs  api_bin.rs  arangodb.rs  args.rs  auth.rs  computations.rs  conncomp.rs  graphs.rs  graveyard.rs  main.rs  pagerank.rs
graphs/: edges_small.jsonl  scc_edges.jsonl  scc_vertices.jsonl  vertices_small.jsonl
grupload/: Cargo.toml
grupload/src/: commands.rs  main.rs
jsontasks/: x.json  y.json  z.json
jsontasks/versa/: irank.json  labelprop.json  loaddata.json  wcc.json  writeresults.json
notes/: api.txt  d.fish  dump.api  times.txt
perfresults/: 3.10.json  3.10.scc.json  3.10neu.json  3.10oasis.json  3.11.json  3.11neu.json  3.11oasis.json  3.11oasis2.json  3.11oasis3.json  3.11oasis4.json  gral.scc.txt  performance.txt
proto/: definition.proto  graphanalyticsengine.proto
protodoc/: README.md  githubpages.mustache  graphanalytics.html  ourhtml.mustache  ourhtml.tmpl  setup.md
scripts/: full_example.fish  gae  gae.py  versa.py
secrets.jwt/: token
src/: aggregation.rs  algorithms.rs  api.rs  arangodb.rs  args.rs  auth.rs  computations.rs  conncomp.rs  constants.rs  graphs.rs  irank.rs  labelpropagation.rs  lib.rs  logging.rs  main.rs  metrics.rs  pagerank.rs  python.rs  server.rs
src/algorithms/: aggregation.rs  attributepropagation.rs  conncomp.rs  irank.rs  labelpropagation.rs  mod.rs  pagerank.rs  scc.rs  wcc.rs
src/algorithms/linerank/: algorithm.rs  graph_multiplications.rs  mod.rs
src/api/: api.rs  mod.rs
src/arangodb/: arangodb.rs
src/auth/: auth.rs
src/computations/: aggregation.rs  computations.rs  computations_store.rs  mod.rs
src/computations/types/: aggregation_computation.rs  base_computation.rs  component.rs  components_computation.rs  label_propagation_computation.rs  load_computation.rs  mod.rs  pagerank_computation.rs  store_computation.rs
src/compute/: aggregation.rs
src/graph_loader/: arangodb.rs  mod.rs
src/graph_store/: examples.rs  graph.rs  graphs.rs  mod.rs  neighbour_index.rs  vertex_key_index.rs
src/graphs/: examples.rs  graphs.rs
src/http_server/: api.rs
src/metrics/: metrics.rs
src/python/: executor.rs  exporter.rs  graph_exporter.rs  importer.rs  mod.rs  pythoncomputation.rs  result_importer.rs  script.rs
src/python/assets/: base_functions.py  base_functions_cugraph.py  requirements.txt
src/python/snippets/: base_functions.py
src/security/: auth.rs
tests/: authentication_test.rs  authentication_test_adb.rs  authentication_test_auth_service.rs  authentication_test_auth_service_not_available.rs  executor_test.rs  integration_test_template.rs
tests/auth/: arangodb_as_authentication_service.rs  auth_grpc_as_authentication_service.rs  auth_grpc_as_authentication_service_unavailable.rs  mod.rs
utilities/: Cargo.toml
utilities/src/: arangodb_helper.rs  http_helper.rs  lib.rs
