[package]
name = "gral"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.3", features = ["tls"], default-features = false }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
bytes = { version = "1.4.0", default-features = false }
byteorder = { version = "1.4.3", default-features = false }
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
rand = { version = "0.8.5", default-features = false }
pico-args = "0.5.0"
serde = { version = "1.0.160", default-features = false }
serde_json = "1.0.96"
reqwest = { version = "0.11.16", features = ["__rustls", "json"], default-features = false }
log = "0.4"
env_logger = { version = "0.10", default-features = false }
http = "0.2.9"
prost = { version = "0.12.4", default-features = false }
prost-types = { version = "0.12.4", default-features = false }
metrics = "0.21.1"
metrics-exporter-prometheus = { version = "0.12.1", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["fmt"], default-features = false }
tracing = { version = "0.1.40", default-features = false }
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = { version = "0.10.8", default-features = false }
time = { version = "0.3.34", default-features = false }
tonic = { version = "0.11.0", features = ["tls"] }
futures = { version = "0.3.30", features = ["executor"], default-features = false }
tempfile = "3"
arrow = { version = "51.0.0", default-features = false }
parquet = { version = "51.0.0", features = ["arrow", "json", "snap"], default-features = false }
prost-wkt = "0.5.1"
prost-wkt-types = { version = "0.5.1", default-features = false }
pem = "3.0.4"
approx = { version = "0.5.1", default-features = false }

[build-dependencies]
prost-build = { version = "0.12.4", default-features = false }
prost-wkt-build = "0.5.1"
tonic = { version = "0.11.0", default-features = false }
tonic-build = { version = "0.11.0", features = ["prost"], default-features = false }

