[package]
name = "gral"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.3", features = ["tls"] }
tokio = { version = "1", features = ["full"] }
bytes = "1.4.0"
byteorder = "1.4.3"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
rand = "0.8.5"
pico-args = { version = "0.5.0", features = ["eq-separator"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { version= "0.11.16", features = ["json", "rustls-tls-manual-roots"] }
log = "0.4"
env_logger = "0.10"
async-channel = "1.8.0"
