[package]
name = "gral"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.3", features = ["tls"] }
tokio = { version = "1", features = ["full"] }
bytes = "1.4.0"
byteorder = "1.4.3"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
rand = "0.8.5"
pico-args = { version = "0.5.0", features = ["eq-separator"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { version= "0.11.16", features = ["json", "rustls-tls-manual-roots"] }
log = "0.4"
env_logger = "0.10"
async-channel = "1.8.0"
http = "0.2.9"
prost = "0.11.9"
prost-types = "0.11.9"
pbjson = "0.5.1"
pbjson-types = "0.5.1"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
metrics-util = "0.15.1"
base64 = "0.21.2"
tracing-subscriber = "0.3.18"
tracing = { version = "0.1.40", features = ["log"] }
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.8"
time = { version = "0.3.34", features = ["serde"] }

[build-dependencies]
pbjson-build = "0.5.1"
prost-build = "0.11.9"
