[package]
name = "grupload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.4.0"
byteorder = "1.4.3"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
reqwest = { version= "0.11.16", features = ["blocking", "native-tls", "rustls-tls"] }
pico-args = { version = "0.5.0", features = ["eq-separator"] }
rand = "0.8.5"
serde = { version = "1.0.160", features = [] }
serde_json = "1.0.96"
sha256 = "1.1.3"
